Finaliza importação do arquivo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 br.com.ntconsult.dataanalyzer.data.basefolder=.
 br.com.ntconsult.dataanalyzer.data.file.extension=.dat
+#br.com.ntconsult.dataanalyzer.data.file.separator=ç
